Login View Model

--- a/Lands2/Lands2/Views/LoginPage.xaml
+++ b/Lands2/Lands2/Views/LoginPage.xaml
@@ -5,7 +5,8 @@
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Login">
     <ContentPage.Content>
-        <ScrollView>
+        <ScrollView
+            BindingContext="{Binding Login}">
             <StackLayout
             Padding="10,20">
                 <Label 
@@ -34,6 +35,7 @@
                     Grid.Row="0"
                     Grid.Column="1"
                     Keyboard="Email"
+                    Text="{Binding Email, Mode=TwoWay}"
                     Placeholder="Enter your email...">
                     </Entry>
                     <Label
@@ -45,11 +47,13 @@
                     <Entry
                     Grid.Row="1"
                     Grid.Column="1"
-                    IsPassword="True"                
+                    IsPassword="True"
+                    Text="{Binding Password, Mode=TwoWay}"
                     Placeholder="Enter your password...">
                     </Entry>
                 </Grid>
                 <ActivityIndicator
+                    IsRunning="{Binding isRunning, Mode=TwoWay}"
                     VerticalOptions="CenterAndExpand">                    
                 </ActivityIndicator>
                 <StackLayout
@@ -60,6 +64,7 @@
                     VerticalOptions="CenterAndExpand">
                     </Label>
                     <Switch
+                        IsToggled="{Binding IsRemembered, Mode=TwoWay}"
                     HorizontalOptions="End">
                     </Switch>
                 </StackLayout>
@@ -76,6 +81,7 @@
                     <Button
                     BackgroundColor="Navy"
                     BorderRadius="23"
+                    Command="{Binding LoginCommand}"
                     HeightRequest="46"
                     Text="Login"
                     TextColor="White">
