--- a/Lands2/Lands2/Views/LoginPage.xaml
+++ b/Lands2/Lands2/Views/LoginPage.xaml
@@ -83,6 +83,7 @@
                     BorderRadius="23"
                     Command="{Binding LoginCommand}"
                     HeightRequest="46"
+                    IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                     Text="Login"
                     TextColor="White">
                     </Button>
@@ -90,6 +91,7 @@
                     BackgroundColor="Purple"
                     BorderRadius="23"
                     HeightRequest="46"
+                    IsEnabled="{Binding IsEnabled, Mode=TwoWay}"
                     Text="Register"
                     TextColor="White">
                     </Button>
