--- a/Lands2/Lands2/Views/LandsPage.xaml
+++ b/Lands2/Lands2/Views/LandsPage.xaml
@@ -32,6 +32,9 @@
                                 HasShadow="true"                                
                                 Margin="5"
                                 >
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SelectLandCommand}"/>
+                                </Frame.GestureRecognizers>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
