--- a/Lands2/Lands2/Views/LandPage.xaml
+++ b/Lands2/Lands2/Views/LandPage.xaml
@@ -4,7 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Lands2.Views.LandPage"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
-    Title="Land">
+    Icon="ic_information_logo.png"
+    Title="Information">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding Land}">
