--- a/Lands2/Lands2/Views/LandTabbedPage.xaml
+++ b/Lands2/Lands2/Views/LandTabbedPage.xaml
@@ -2,6 +2,14 @@
 <TabbedPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="Lands2.Views.LandTabbedPage">
-
+    xmlns:tabs="clr-namespace:Lands2.Views"
+    x:Class="Lands2.Views.LandTabbedPage"
+    Title="Land">
+    <TabbedPage.Children>
+        <tabs:LandPage/>
+        <tabs:BordersPage/>
+        <tabs:CurrenciesPage/>
+        <tabs:TranslationsPage/>
+        <tabs:LanguagesPage/>
+    </TabbedPage.Children>
 </TabbedPage>
