--- a/Lands2/Lands2/Views/LandsPage.xaml
+++ b/Lands2/Lands2/Views/LandsPage.xaml
@@ -1,10 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+             xmlns:fftransformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+             xmlns:ffimageloadingsvg="clr-namespace:FFImageLoading.Svg.Forms;assembly=FFImageLoading.Svg.Forms"
              x:Class="Lands2.Views.LandsPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              BackgroundColor="Silver"
              Title="Lands">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <ffimageloadingsvg:SvgImageSourceConverter
+                x:Key="SvgImageSourceConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout
             BindingContext="{Binding Lands}">
@@ -37,12 +46,19 @@
                                 </Frame.GestureRecognizers>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"/>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
+                                    <ffimageloading:CachedImage
+                                        Grid.Column="0"
+                                        HeightRequest="30"
+                                        Source="{Binding Flag, Converter={StaticResource SvgImageSourceConverter}}"
+                                        WidthRequest="60">                                        
+                                    </ffimageloading:CachedImage>
                                     <!-- En la primera columna colocamos un StackLayout-->
                                     <StackLayout
-                                    Grid.Column="0"
+                                    Grid.Column="1"
                                     VerticalOptions="Center">
                                         <Label
                                         FontAttributes="Bold"
@@ -57,7 +73,7 @@
                                     </StackLayout>
                                     <!--En la columna 1 creamos lo siguiente-->
                                     <Image
-                                        Grid.Column="1"
+                                        Grid.Column="2"
                                         HorizontalOptions="End"
                                         Source="ic_chevron_right">
                                     </Image>
