--- a/Lands2/Lands2/Views/LoginPage.xaml
+++ b/Lands2/Lands2/Views/LoginPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:i18n="clr-namespace:Lands2.Helpers"
              x:Class="Lands2.Views.LoginPage"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
              Title="Login">
@@ -36,7 +37,7 @@
                     Grid.Column="1"
                     Keyboard="Email"
                     Text="{Binding Email, Mode=TwoWay}"
-                    Placeholder="Enter your email...">
+                    Placeholder="{i18n:Translate EmailPlaceHolder}">
                     </Entry>
                     <Label
                     Grid.Row="1"
@@ -60,7 +61,7 @@
                 Orientation="Horizontal">
                     <Label
                     HorizontalOptions="StartAndExpand"
-                    Text="Remember me on this device"
+                    Text="{i18n:Translate Rememberme}"
                     VerticalOptions="CenterAndExpand">
                     </Label>
                     <Switch
