--- a/Lands2/Lands2/Views/MenuPage.xaml
+++ b/Lands2/Lands2/Views/MenuPage.xaml
@@ -2,12 +2,15 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:i18n="clr-namespace:Lands2.Helpers"
     x:Class="Lands2.Views.MenuPage"
     BindingContext="{Binding Main, Source={StaticResource Locator}}"
+    BackgroundColor="Navy"
     Title="{i18n:Translate Menu}">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Menu"
+                   TextColor="White"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
         </StackLayout>
