--- a/Lands2/Lands2/App.xaml
+++ b/Lands2/Lands2/App.xaml
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:infra="clr-namespace:Lands2.Infrastructure" 
-             x:Class="Lands2.App">   
+<Application
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:infra="clr-namespace:Lands2.Infrastructure" 
+    x:Class="Lands2.App">   
 	<Application.Resources>
 
 		<!-- Application resource dictionary -->
         <ResourceDictionary>
+            <!-- Parameters-->
             <infra:InstanceLocator x:Key="Locator"/>
+            <!-- Parameters-->
+            <x:String x:Key="APILands">http://restcountries.eu</x:String>
+            <x:String x:Key="APISecurity">http://lands2api.azurewebsites.net</x:String>
         </ResourceDictionary>
 	</Application.Resources>
 </Application>
